// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden field hashes > seed 1: initial state and after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "03fe7ed8",
    "boundaryStress": "94af51be",
    "crustAge": "348c1b00",
    "crustType": "5285f5b5",
    "elevation": "2ff798c5",
    "iceFraction": "db7fee64",
    "plateId": "1659f272",
    "precipitation": "09fb7344",
    "sedimentM": "c043034b",
    "sutureYears": "b0549dc5",
    "temperature": "28b7a4ba",
    "timeYears": 10000000,
    "windU": "ad886805",
    "windV": "6f28d0e5",
  },
  "initial": {
    "biome": "a7666ca5",
    "boundaryStress": "b0549dc5",
    "crustAge": "012fbce4",
    "crustType": "10946445",
    "elevation": "e44964c0",
    "iceFraction": "b0549dc5",
    "plateId": "15a8f862",
    "precipitation": "be711940",
    "sedimentM": "b0549dc5",
    "sutureYears": "b0549dc5",
    "temperature": "edda30dc",
    "windU": "32f28705",
    "windV": "2b109c45",
  },
}
`;

exports[`golden field hashes > seed 42: initial state and after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "e2e31168",
    "boundaryStress": "3470f23d",
    "crustAge": "5df42012",
    "crustType": "8383c658",
    "elevation": "373918c2",
    "iceFraction": "fbb1b22f",
    "plateId": "830343d2",
    "precipitation": "cd23f547",
    "sedimentM": "25b5b01f",
    "sutureYears": "b0549dc5",
    "temperature": "fc11acd1",
    "timeYears": 10000000,
    "windU": "f4059f85",
    "windV": "5f9a56b5",
  },
  "initial": {
    "biome": "0dfa5ef5",
    "boundaryStress": "b0549dc5",
    "crustAge": "69172c16",
    "crustType": "041eea65",
    "elevation": "4cefbe1d",
    "iceFraction": "b0549dc5",
    "plateId": "93938d05",
    "precipitation": "5970823a",
    "sedimentM": "b0549dc5",
    "sutureYears": "b0549dc5",
    "temperature": "05e4bd0a",
    "windU": "9e350335",
    "windV": "18f86d55",
  },
}
`;

exports[`golden field hashes > seed 1337: initial state and after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "887eb9b5",
    "boundaryStress": "fb4df36a",
    "crustAge": "f9bebba2",
    "crustType": "0f3eab88",
    "elevation": "dab38eea",
    "iceFraction": "981b1b4c",
    "plateId": "6e0c87c2",
    "precipitation": "cdaf6979",
    "sedimentM": "7e02b244",
    "sutureYears": "b0549dc5",
    "temperature": "fde2422d",
    "timeYears": 10000000,
    "windU": "060f9b15",
    "windV": "0999dc75",
  },
  "initial": {
    "biome": "02ded838",
    "boundaryStress": "b0549dc5",
    "crustAge": "d7f5b05d",
    "crustType": "da81d005",
    "elevation": "e624cd09",
    "iceFraction": "b0549dc5",
    "plateId": "44207345",
    "precipitation": "4a9e3318",
    "sedimentM": "b0549dc5",
    "sutureYears": "b0549dc5",
    "temperature": "943c80bd",
    "windU": "4d1f44f5",
    "windV": "c917cae5",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > compactArcs on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "ef814d05",
    "boundaryStress": "9a4c27d4",
    "crustAge": "135f1f7a",
    "crustType": "87b24a28",
    "elevation": "af140829",
    "iceFraction": "dbe0e446",
    "plateId": "af509a9b",
    "precipitation": "f7736d9b",
    "sedimentM": "546f7aaf",
    "sutureYears": "b0549dc5",
    "temperature": "5c6ac1b5",
    "timeYears": 10000000,
    "windU": "8d4cb315",
    "windV": "ed49cff5",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > crustFates on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "b129b048",
    "boundaryStress": "e5a1b483",
    "crustAge": "1b6fdaec",
    "crustType": "47774d85",
    "elevation": "30ab9ddb",
    "iceFraction": "c360f407",
    "plateId": "b7762ad5",
    "precipitation": "7b643463",
    "sedimentM": "9c67def1",
    "sutureYears": "61f1d94b",
    "temperature": "f4521044",
    "timeYears": 10000000,
    "windU": "291ea125",
    "windV": "e62aca05",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > emergentArcTaper on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "a327b035",
    "boundaryStress": "a65207ca",
    "crustAge": "589465cb",
    "crustType": "574f4975",
    "elevation": "cfca0b45",
    "iceFraction": "2111bded",
    "plateId": "8cbb4ce5",
    "precipitation": "6f883ad2",
    "sedimentM": "35008121",
    "sutureYears": "b0549dc5",
    "temperature": "e8d8ffd4",
    "timeYears": 10000000,
    "windU": "d9fce145",
    "windV": "664bed95",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > marinePlanation on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "ff3c0be5",
    "boundaryStress": "3470f23d",
    "crustAge": "5df42012",
    "crustType": "8383c658",
    "elevation": "27a19c3d",
    "iceFraction": "e784ff7e",
    "plateId": "830343d2",
    "precipitation": "cd985816",
    "sedimentM": "628d0119",
    "sutureYears": "b0549dc5",
    "temperature": "a7f1bedd",
    "timeYears": 10000000,
    "windU": "3ffed615",
    "windV": "22bcf035",
  },
}
`;

exports[`golden field hashes: blockIsostasy on (#84) > seed 1: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "83b09b05",
    "boundaryStress": "94af51be",
    "crustAge": "348c1b00",
    "crustType": "5285f5b5",
    "elevation": "d08119e0",
    "iceFraction": "f4efeeca",
    "plateId": "1659f272",
    "precipitation": "677ace70",
    "sedimentM": "1a12eb05",
    "sutureYears": "b0549dc5",
    "temperature": "85a5fe1c",
    "timeYears": 10000000,
    "windU": "3942f885",
    "windV": "408c8d15",
  },
}
`;

exports[`golden field hashes: blockIsostasy on (#84) > seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "aa6345b8",
    "boundaryStress": "3470f23d",
    "crustAge": "5df42012",
    "crustType": "8383c658",
    "elevation": "2df8c3ed",
    "iceFraction": "4f08a051",
    "plateId": "830343d2",
    "precipitation": "f3c4f6ec",
    "sedimentM": "f90bc780",
    "sutureYears": "b0549dc5",
    "temperature": "d79b5e0d",
    "timeYears": 10000000,
    "windU": "1d7faea5",
    "windV": "1fde7be5",
  },
}
`;

exports[`golden field hashes: blockIsostasy on (#84) > seed 1337: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "7d1ebe45",
    "boundaryStress": "fb4df36a",
    "crustAge": "f9bebba2",
    "crustType": "0f3eab88",
    "elevation": "6d058a53",
    "iceFraction": "24589704",
    "plateId": "6e0c87c2",
    "precipitation": "ec3b1676",
    "sedimentM": "8f4bfb92",
    "sutureYears": "b0549dc5",
    "temperature": "6d4825c9",
    "timeYears": 10000000,
    "windU": "d87ba375",
    "windV": "29e0b3f5",
  },
}
`;
